# stm32_rust_example

./: Cargo.toml
.cargo/: config.toml
src/: hal.rs  main.rs  mcu.rs  pac.rs
