[package]
name = "rust_embeded_stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
stm32f1 = { version = "0.15.1", features = ["stm32f103", "cortex-m-rt"] }
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt"] }
